--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-red-100">
                             <img src="assets/emergency.png" alt="Emergency" class="max-h-8 max-w-8'">
                         </div>
-                        <button class="text-gray-500 text-2xl like">
+                        <button id="like 1" class="text-gray-500 text-2xl">
                             <i class="fa-regular fa-heart"></i>
                         </button>
                     </div>
@@ -101,7 +101,7 @@
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-blue-100">
                             <img src="assets/police.png" alt="Police" class="max-h-8 max-w-8'">
                         </div>
-                        <button class="text-gray-500 text-2xl like">
+                        <button id="like 2" class="text-gray-500 text-2xl">
                             <i class="fa-regular fa-heart"></i>
                         </button>
                     </div>
@@ -136,7 +136,7 @@
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-red-100">
                             <img src="assets/fire-service.png" alt="Fire Service" class="max-h-8 max-w-8'">
                         </div>
-                        <button class="text-gray-500 text-2xl like">
+                        <button id="like 3" class="text-gray-500 text-2xl">
                             <i class="fa-regular fa-heart"></i>
                         </button>
                     </div>
@@ -171,7 +171,7 @@
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-red-100">
                             <img src="assets/ambulance.png" alt="Ambulance" class="max-h-8 max-w-8'">
                         </div>
-                        <button class="text-gray-500 text-2xl like">
+                        <button id="like 4" class="text-gray-500 text-2xl">
                             <i class="fa-regular fa-heart"></i>
                         </button>
                     </div>
@@ -206,7 +206,7 @@
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-red-100">
                             <img src="assets/emergency.png" alt="Emergency" class="max-h-8 max-w-8'">
                         </div>
-                        <button class="text-gray-500 text-2xl like">
+                        <button id="like 5" class="text-gray-500 text-2xl">
                             <i class="fa-regular fa-heart"></i>
                         </button>
                     </div>
@@ -241,7 +241,7 @@
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-red-100">
                             <img src="assets/emergency.png" alt="Emergency" class="max-h-8 max-w-8'">
                         </div>
-                        <button class="text-gray-500 text-2xl like">
+                        <button id="like 6" class="text-gray-500 text-2xl">
                             <i class="fa-regular fa-heart"></i>
                         </button>
                     </div>
@@ -276,7 +276,7 @@
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-red-100">
                             <img src="assets/emergency.png" alt="Emergency" class="max-h-8 max-w-8'">
                         </div>
-                        <button class="text-gray-500 text-2xl like">
+                        <button id="like 7" class="text-gray-500 text-2xl">
                             <i class="fa-regular fa-heart"></i>
                         </button>
                     </div>
@@ -311,7 +311,7 @@
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-red-100">
                             <img src="assets/brac.png" alt="Brac" class="max-h-8 max-w-8'">
                         </div>
-                        <button class="text-gray-500 text-2xl like">
+                        <button id="like 8" class="text-gray-500 text-2xl">
                             <i class="fa-regular fa-heart"></i>
                         </button>
                     </div>
@@ -346,7 +346,7 @@
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-yellow-100">
                             <img src="assets/Bangladesh-Railway.png" alt="Bangladesh-Railway" class="max-h-8 max-w-8'">
                         </div>
-                        <button class="text-gray-500 text-2xl like">
+                        <button id="like 9" class="text-gray-500 text-2xl">
                             <i class="fa-regular fa-heart"></i>
                         </button>
                     </div>
