Call alert added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
         integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+        .s {
+            display: block;
+            width: calc(50% - 10px);
+        }
+    </style>
 </head>
 
 <body>
@@ -84,11 +90,11 @@
                     </p>
                 </div>
                 <div class="flex gap-2">
-                    <button class="border-2 border-gray-200 text-gray-500 py-2.5 px-12 rounded-lg copied">
+                    <button class="s border-2 border-gray-200 text-gray-500 py-2.5 px-12 rounded-lg copied">
                         <i class="fa-regular fa-clone"></i>
                         Copy
                     </button>
-                    <button class="bg-green-600 text-white py-2.5 px-12 rounded-lg call">
+                    <button class="s bg-green-600 text-white py-2.5 px-12 rounded-lg call">
                         <i class="fa-solid fa-phone"></i>
                         Call
                     </button>
@@ -119,11 +125,11 @@
                     </p>
                 </div>
                 <div class="flex gap-2">
-                    <button class="border-2 border-gray-200 text-gray-500 py-2.5 px-12 rounded-lg copied">
+                    <button class="s border-2 border-gray-200 text-gray-500 py-2.5 px-12 rounded-lg copied">
                         <i class="fa-regular fa-clone"></i>
                         Copy
                     </button>
-                    <button class="bg-green-600 text-white py-2.5 px-12 rounded-lg call">
+                    <button class="s bg-green-600 text-white py-2.5 px-12 rounded-lg call">
                         <i class="fa-solid fa-phone"></i>
                         Call
                     </button>
@@ -154,11 +160,11 @@
                     </p>
                 </div>
                 <div class="flex gap-2">
-                    <button class="border-2 border-gray-200 text-gray-500 py-2.5 px-12 rounded-lg copied">
+                    <button class="s border-2 border-gray-200 text-gray-500 py-2.5 px-12 rounded-lg copied">
                         <i class="fa-regular fa-clone"></i>
                         Copy
                     </button>
-                    <button class="bg-green-600 text-white py-2.5 px-12 rounded-lg call">
+                    <button class="s bg-green-600 text-white py-2.5 px-12 rounded-lg call">
                         <i class="fa-solid fa-phone"></i>
                         Call
                     </button>
@@ -189,11 +195,11 @@
                     </p>
                 </div>
                 <div class="flex gap-2">
-                    <button class="border-2 border-gray-200 text-gray-500 py-2.5 px-12 rounded-lg copied">
+                    <button class="s border-2 border-gray-200 text-gray-500 py-2.5 px-12 rounded-lg copied">
                         <i class="fa-regular fa-clone"></i>
                         Copy
                     </button>
-                    <button class="bg-green-600 text-white py-2.5 px-12 rounded-lg call">
+                    <button class="s bg-green-600 text-white py-2.5 px-12 rounded-lg call">
                         <i class="fa-solid fa-phone"></i>
                         Call
                     </button>
@@ -224,11 +230,11 @@
                     </p>
                 </div>
                 <div class="flex gap-2">
-                    <button class="border-2 border-gray-200 text-gray-500 py-2.5 px-12 rounded-lg copied">
+                    <button class="s border-2 border-gray-200 text-gray-500 py-2.5 px-12 rounded-lg copied">
                         <i class="fa-regular fa-clone"></i>
                         Copy
                     </button>
-                    <button class="bg-green-600 text-white py-2.5 px-12 rounded-lg call">
+                    <button class="s bg-green-600 text-white py-2.5 px-12 rounded-lg call">
                         <i class="fa-solid fa-phone"></i>
                         Call
                     </button>
@@ -259,11 +265,11 @@
                     </p>
                 </div>
                 <div class="flex gap-2">
-                    <button class="border-2 border-gray-200 text-gray-500 py-2.5 px-12 rounded-lg copied">
+                    <button class="s border-2 border-gray-200 text-gray-500 py-2.5 px-12 rounded-lg copied">
                         <i class="fa-regular fa-clone"></i>
                         Copy
                     </button>
-                    <button class="bg-green-600 text-white py-2.5 px-12 rounded-lg call">
+                    <button class="s bg-green-600 text-white py-2.5 px-12 rounded-lg call">
                         <i class="fa-solid fa-phone"></i>
                         Call
                     </button>
@@ -294,11 +300,11 @@
                     </p>
                 </div>
                 <div class="flex gap-2">
-                    <button class="border-2 border-gray-200 text-gray-500 py-2.5 px-12 rounded-lg copied">
+                    <button class="s border-2 border-gray-200 text-gray-500 py-2.5 px-12 rounded-lg copied">
                         <i class="fa-regular fa-clone"></i>
                         Copy
                     </button>
-                    <button class="bg-green-600 text-white py-2.5 px-12 rounded-lg call">
+                    <button class="s bg-green-600 text-white py-2.5 px-12 rounded-lg call">
                         <i class="fa-solid fa-phone"></i>
                         Call
                     </button>
@@ -329,11 +335,11 @@
                     </p>
                 </div>
                 <div class="flex gap-2">
-                    <button class="border-2 border-gray-200 text-gray-500 py-2.5 px-12 rounded-lg copied">
+                    <button class="s border-2 border-gray-200 text-gray-500 py-2.5 px-12 rounded-lg copied">
                         <i class="fa-regular fa-clone"></i>
                         Copy
                     </button>
-                    <button class="bg-green-600 text-white py-2.5 px-12 rounded-lg call">
+                    <button class="s bg-green-600 text-white py-2.5 px-12 rounded-lg call">
                         <i class="fa-solid fa-phone"></i>
                         Call
                     </button>
@@ -364,11 +370,11 @@
                     </p>
                 </div>
                 <div class="flex gap-2">
-                    <button class="border-2 border-gray-200 text-gray-500 py-2.5 px-12 rounded-lg copied">
+                    <button class="s border-2 border-gray-200 text-gray-500 py-2.5 px-12 rounded-lg copied">
                         <i class="fa-regular fa-clone"></i>
                         Copy
                     </button>
-                    <button class="bg-green-600 text-white py-2.5 px-12 rounded-lg call">
+                    <button class="s bg-green-600 text-white py-2.5 px-12 rounded-lg call">
                         <i class="fa-solid fa-phone"></i>
                         Call
                     </button>
