--- a/index.html
+++ b/index.html
@@ -170,6 +170,17 @@
                     </button>
                 </div>
             </div>
+            <!-- extra -->
+            <div class="row-span-3 bg-white p-6 rounded-lg order-first sm:order-none" id="add">
+                <div class="flex justify-between items-center">
+                    <h1 class="text-2xl font-semibold">
+                        Call History
+                    </h1>
+                    <button class="bg-green-600 font-semibold text-white py-2.5 px-12 rounded-4xl">
+                        Clear
+                    </button>
+                </div>
+            </div>
             <!-- 4 -->
             <div class="bg-white p-8 rounded-lg">
                 <div>
