Clear func added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joruri seba</title>
+    <link rel="stylesheet" href="Styles/styles.css">
     <link rel="icon" type="image/x-icon" href="/assets/logo.png">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
@@ -172,11 +173,12 @@
             </div>
             <!-- extra -->
             <div class="row-span-3 bg-white p-6 rounded-lg order-first sm:order-none" id="add">
-                <div class="flex justify-between items-center">
+                <div class="flex justify-between items-center mb-2">
                     <h1 class="text-2xl font-semibold">
+                        <i class="fa-regular fa-clock text-gray-500"></i>
                         Call History
                     </h1>
-                    <button class="bg-green-600 font-semibold text-white py-2.5 px-12 rounded-4xl">
+                    <button id="clr" class="bg-green-600 font-semibold text-white py-2.5 px-12 rounded-4xl">
                         Clear
                     </button>
                 </div>
