Gradient and Time added

--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
     </nav>
 
 
-    <header class="flex flex-col justify-center sm:items-center bg-green-950 text-white p-5">
-        <!-- gradient lagbe -->
+    <header class="flex flex-col justify-center sm:items-center bg-gradient-to-b sm:bg-gradient-to-r from-green-950 via-green-800 to-green-950 text-white p-5">
         <img class="max-h-24 max-w-24" src="assets/logo-dark.png" alt="Logo">
         <h1 class="text-4xl my-2.5">
             Emergency Service Directory
